<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_clean"
    tools:context=".AddBasketActivity" >

    <LinearLayout
        android:id="@+id/navtop"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/bg_navtop"
        android:gravity="center_vertical"
        android:paddingLeft="10dp" >

        <ImageView
            android:id="@+id/prevButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_view_previous_desc"
            android:src="@drawable/selector_back_full" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/navtop"
        android:layout_margin="10dp"
        android:background="@drawable/bg_header"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingTop="5dp" >

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/image_view_admin_desc"
            android:scaleType="fitXY"
            android:src="@drawable/ic_basket" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/title_activity_add_basket"
            android:textColor="#fff"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/headerLayout"
        android:layout_marginTop="10dp"
        android:padding="15dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/editTextBasketName"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:background="@drawable/bg_white"
                android:ems="10"
                android:hint="@string/basket_name"
                android:padding="10dp"
                android:textColor="@android:color/black"
                android:textColorHint="@color/edit_text_hint"
                android:textColorLink="@color/edit_text_color_link" >

                <requestFocus />
            </EditText>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:text="@string/one_suki_point"
                    android:textColor="@color/text" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/textView2"
                    android:text="@string/equal_sign"
                    android:textColor="@color/text" />

                <EditText
                    android:id="@+id/editTextConversionAmount"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/textView3"
                    android:background="@drawable/bg_white"
                    android:ems="10"
                    android:hint="@string/conversion_amount"
                    android:inputType="numberDecimal"
                    android:padding="10dp"
                    android:textColor="@android:color/black"
                    android:textColorHint="@color/edit_text_hint"
                    android:textColorLink="@color/edit_text_color_link" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp" >

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true" >

                    <ImageView
                        android:id="@+id/buttonCancelBasket"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/margin_top_submit_button"
                        android:contentDescription="@string/image_view_add_basket_desc"
                        android:src="@drawable/selector_cancel" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/buttonCancelBasket"
                        android:layout_centerHorizontal="true"
                        android:text="@string/cancel"
                        android:textColor="@color/text"
                        android:textStyle="bold" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true" >

                    <ImageView
                        android:id="@+id/buttonSaveBasket"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/margin_top_submit_button"
                        android:contentDescription="@string/image_view_add_basket_desc"
                        android:src="@drawable/selector_accept" />

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/buttonSaveBasket"
                        android:layout_centerHorizontal="true"
                        android:text="@string/add_basket"
                        android:textColor="@color/text"
                        android:textStyle="bold" />
                </RelativeLayout>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>