<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_clean"
    tools:context=".PrizeActivity" >

    <LinearLayout
        android:id="@+id/navtop"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/bg_navtop"
        android:gravity="center_vertical"
        android:paddingLeft="10dp" >

        <ImageView
            android:id="@+id/prevButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_view_previous_desc"
            android:src="@drawable/selector_back_full" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/navtop"
        android:layout_margin="10dp"
        android:background="@drawable/bg_header"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingTop="5dp" >

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/image_view_admin_desc"
            android:scaleType="fitXY"
            android:src="@drawable/ic_basket" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/prize_txtview"
            android:textColor="#fff"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/headerLayout" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp" >

            <EditText
                android:id="@+id/redeemMobileNumberEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_white"
                android:ems="10"
                android:hint="@string/input_mobile_number"
                android:inputType="phone"
                android:padding="10dp"
                android:textColor="@android:color/black"
                android:textColorHint="@color/edit_text_hint"
                android:textColorLink="@color/edit_text_color_link" >

                <requestFocus />
            </EditText>

            <Button
                android:id="@+id/redeemNextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/selector_button_orange"
                android:text="@string/next"
                android:textColor="@color/text"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>