<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_clean"
    tools:context=".ViewBasketsActivity" >

    <LinearLayout
        android:id="@+id/navtop"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/bg_navtop"
        android:gravity="center_vertical"
        android:paddingLeft="10dp" >

        <ImageView
            android:id="@+id/prevButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_view_previous_desc"
            android:src="@drawable/selector_back_full" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/navtop"
        android:layout_margin="10dp"
        android:background="@drawable/bg_header"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingTop="5dp" >

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/image_view_admin_desc"
            android:scaleType="fitXY"
            android:src="@drawable/ic_basket" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/title_activity_view_baskets"
            android:textColor="#fff"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/headerLayout" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <RelativeLayout
                android:id="@+id/addBasketLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="10dp" >

                <ImageView
                    android:id="@+id/addBasketButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/margin_top_submit_button"
                    android:contentDescription="@string/image_view_add_basket_desc"
                    android:src="@drawable/selector_basket_add" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/addBasketButton"
                    android:layout_centerHorizontal="true"
                    android:text="@string/add_basket"
                    android:textColor="@color/text"
                    android:textStyle="bold" />
            </RelativeLayout>

            <TextView
                android:id="@+id/contentStatementTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/addBasketLayout"
                android:layout_marginLeft="10dp"
                android:textColor="#fff"
                android:textSize="14sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/basketsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/contentStatementTextView"
                android:orientation="vertical"
                android:paddingBottom="20dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp" >
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>